--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TvDownload</string>
+    <string name="app_name">MediaCenterTech</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
 </resources>
